...
    );
  };

  return (
    <Screen safeAreaEdges={["top"]} style={styles.container}>
      <AppHeader
        title="Consumer Profile"
        rightAction={{
          icon: "settings",
          accessibilityLabel: "Open Settings",
          onPress: () => router.push(ROUTES.consumer.settings),
        }}
      />
...
              onPress={handleEditProfile}
              leftIcon="profile"
              fullWidth
              accessibilityLabel="Edit Profile"
            />
            <SecondaryButton
              label="Settings & Preferences"
              onPress={() => router.push(ROUTES.consumer.settings)}
              leftIcon="settings"
              fullWidth
              accessibilityLabel="Settings and Preferences"
            />
            <Pressable
...
